<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewmodel"
                type="com.inauth.codechallenge.tasks.TasksViewModel"/>
    </data>

    <LinearLayout
            android:id="@+id/noResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/location_info"
                android:layout_marginBottom="@dimen/list_item_margin_medium"
                android:textStyle="bold"
                style="@android:style/TextAppearance.Large"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/current_gps_coordinate"
                android:layout_marginBottom="@dimen/list_item_margin"
                android:textStyle="bold"
                style="@android:style/TextAppearance.Medium"/>

        <TextView
                android:id="@+id/locationValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@{viewmodel.locationValue}"
                android:layout_marginBottom="@dimen/list_item_margin_medium"
                android:textColor="@android:color/background_dark"
                style="@android:style/TextAppearance.Small"
                tools:text="Test"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/current_distance_to_sf"
                android:textStyle="bold"
                style="@android:style/TextAppearance.Medium"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="@dimen/list_item_margin"
                android:text="@string/center_of_sf"
                style="@android:style/TextAppearance.Small"/>

        <TextView
                android:id="@+id/distanceValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@{viewmodel.distanceValue}"
                android:textColor="@android:color/background_dark"
                style="@android:style/TextAppearance.Small"
                tools:text="Test"/>

    </LinearLayout>

</layout>